force-app/main/default/objects/BLN_Vehicle__c/BLN_Vehicle__c.object-meta.xml
<CustomObject>
    <description>FOUK-495 This object is created for storing the Vehicles.</description>
    <label>Vehicle</label>
    <nameField>
        <displayFormat>V-{00000000}</displayFormat>
        <label>Vehicle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>