force-app/main/default/objects/BLN_Vehicle__c/fields/BLN_Colour__c.field-meta.xml
<CustomField>
    <fullName>BLN_Colour__c</fullName>
    <description>FOUK-3425 This field is used to store colour of vehicle.</description>
    <label>Colour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>