force-app/main/default/objects/BLN_Vehicle__c/fields/BLN_IsVehicleCalibrationRequired__c.field-meta.xml
<CustomField>
    <fullName>BLN_IsVehicleCalibrationRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-1819 This field is used to store if vehicle calibration is required or not.</description>
    <label>Is Vehicle Calibration Required?</label>
    <type>Checkbox</type>
</CustomField>