force-app/main/default/objects/BLN_Vehicle__c/fields/BLN_MakeOfVehicle__c.field-meta.xml
<CustomField>
    <fullName>BLN_MakeOfVehicle__c</fullName>
    <description>FOUK-116--&gt; This field is created for make of vehicle details.</description>
    <label>Make Of Vehicle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>