force-app/main/default/objects/BLN_Vehicle__c/fields/BLN_MDMID__c.field-meta.xml
<CustomField>
    <fullName>BLN_MDMID__c</fullName>
    <description>FOUK-1819 This field is used to store MDM Id for vehicle object.</description>
    <externalId>true</externalId>
    <label>MDM ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>