force-app/main/default/objects/BLN_Vehicle__c/fields/BLN_MigratedData__c.field-meta.xml
<CustomField>
    <fullName>BLN_MigratedData__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-2448</description>
    <label>Migrated Data</label>
    <type>Checkbox</type>
</CustomField>