force-app/main/default/objects/BLN_Vehicle__c/fields/BLN_Mileage__c.field-meta.xml
<CustomField>
    <fullName>BLN_Mileage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FOUK-1012 This field is used to store Mileage.</description>
    <label>Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>