force-app/main/default/objects/BLN_Vehicle__c/fields/BLN_ModelOfVehicle__c.field-meta.xml
<CustomField>
    <fullName>BLN_ModelOfVehicle__c</fullName>
    <description>FOUK-116--&gt; This field is created for model of vehicle .</description>
    <label>Model Of Vehicle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>