force-app/main/default/objects/BLN_Vehicle__c/fields/BLN_MVRIS__c.field-meta.xml
<CustomField>
    <fullName>BLN_MVRIS__c</fullName>
    <description>FOUK-495 This field is used to store MVRIS of the vehicle</description>
    <label>MVRIS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>