force-app/main/default/objects/BLN_Vehicle__c/fields/BLN_RegistrationAuthority__c.field-meta.xml
<CustomField>
    <fullName>BLN_RegistrationAuthority__c</fullName>
    <defaultValue>&quot;DVLA&quot;</defaultValue>
    <description>FOUK-3425 This field is used to store registration authority for vehicle.</description>
    <label>Registration Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>