force-app/main/default/objects/BLN_Vehicle__c/fields/BLN_RemedyJobId__c.field-meta.xml
<CustomField>
    <fullName>BLN_RemedyJobId__c</fullName>
    <description>FOUK-2448. Created for the &quot;Transactional Data Migration&quot;.</description>
    <externalId>true</externalId>
    <label>Remedy Job Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>