force-app/main/default/objects/BLN_Vehicle__c/fields/BLN_SpecialTypes__c.field-meta.xml
<CustomField>
    <fullName>BLN_SpecialTypes__c</fullName>
    <description>FOUK-3153 This field is used to store special types for vehicle.</description>
    <label>Special Types</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BLN_SpecialVehicle__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Coach</fullName>
            </value>
            <value>
                <fullName>Motorhome</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>