force-app/main/default/objects/BLN_Vehicle__c/fields/BLN_SpecialVehicle__c.field-meta.xml
<CustomField>
    <fullName>BLN_SpecialVehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-1543 This field is used to check if vehicle is a special vehicle or not.</description>
    <label>Special Vehicle</label>
    <type>Checkbox</type>
</CustomField>