force-app/main/default/objects/BLN_Vehicle__c/fields/BLN_VehicleDetails__c.field-meta.xml
<CustomField>
    <fullName>BLN_VehicleDetails__c</fullName>
    <description>FOUK-1188 This field is used to store concatenated information of make,model,bodytype,colour,year etc field.</description>
    <formula>BLN_MakeOfVehicle__c &amp;&quot; &quot;&amp;  BLN_ModelOfVehicle__c &amp;&quot; &quot;&amp; BLN_BodyType__c &amp;&quot; &quot;&amp; BLN_Colour__c &amp;&quot; &quot;&amp; TEXT(BLN_Year__c)</formula>
    <label>Vehicle Details</label>
    <type>Text</type>
</CustomField>