force-app/main/default/objects/BLN_Vehicle__c/fields/BLN_VehicleNote__c.field-meta.xml
<CustomField>
    <fullName>BLN_VehicleNote__c</fullName>
    <description>Create under FOUK-10575 CR</description>
    <label>Vehicle Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>