force-app/main/default/objects/BLN_Vehicle__c/fields/BLN_VehicleRegNumber__c.field-meta.xml
<CustomField>
    <fullName>BLN_VehicleRegNumber__c</fullName>
    <description>Fouk-109 To store vehicle registeration number.</description>
    <label>Vehicle Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>