force-app/main/default/objects/BLN_Vehicle__c/fields/BLN_VehicleType__c.field-meta.xml
<CustomField>
    <fullName>BLN_VehicleType__c</fullName>
    <description>FOUK-3425 This field used to store vehicle type external mdm id.</description>
    <label>Vehicle Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>