force-app/main/default/objects/BLN_Vehicle__c/fields/BLN_VIN__c.field-meta.xml
<CustomField>
    <fullName>BLN_VIN__c</fullName>
    <description>FOUK-495 This field is used to store vehicle identification number</description>
    <label>VIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>