force-app/main/default/objects/BLN_Vehicle__c/fields/BLN_VRNDoesNotExist__c.field-meta.xml
<CustomField>
    <fullName>BLN_VRNDoesNotExist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-1012,473 This field is used to store VRN does not exist checkbox field</description>
    <label>VRN Does Not Exist</label>
    <type>Checkbox</type>
</CustomField>