force-app/main/default/objects/BLN_Vehicle__c/fields/BLN_YearText__c.field-meta.xml
<CustomField>
    <fullName>BLN_YearText__c</fullName>
    <description>FOUK-4981 This field is used to store year the vehicle was registered in Text.</description>
    <formula>TEXT(BLN_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Text</label>
    <type>Text</type>
</CustomField>