force-app/main/default/objects/BLN_Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BLN_RemedyJobId__c</columns>
    <columns>BLN_VIN__c</columns>
    <columns>BLN_MakeOfVehicle__c</columns>
    <columns>BLN_ModelOfVehicle__c</columns>
    <columns>BLN_VehicleRegNumber__c</columns>
    <columns>BLN_VehicleType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>12/19/2024 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>